// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/no_results_indicator should match snapshot when expanded 1`] = `
<div>
  <div
    class="no-results__holder"
  >
    <div
      class="no-results__wrapper no-results__wrapper--compass"
      data-testid="no-results-wrapper"
    >
      <div
        class="_scrollbar_f5sq5_2 _empty-state_zgtu5_2 no-results__empty-state"
        data-simplebar="init"
      >
        <div
          class="simplebar-wrapper"
        >
          <div
            class="simplebar-height-auto-observer-wrapper"
          >
            <div
              class="simplebar-height-auto-observer"
            />
          </div>
          <div
            class="simplebar-mask"
          >
            <div
              class="simplebar-offset"
              style="right: 0px; bottom: 0px;"
            >
              <div
                aria-label="scrollable content"
                class="simplebar-content-wrapper"
                role="region"
                style="height: auto; overflow-x: hidden; overflow-y: hidden;"
                tabindex="-1"
              >
                <div
                  class="simplebar-content"
                >
                  <div
                    class="_empty-state__container_zgtu5_14"
                  >
                    <div
                      class="_empty-state__illustration_zgtu5_24"
                    >
                      <span
                        aria-hidden="true"
                        class="_illustration_xetnl_2"
                      >
                        <svg
                          fill="none"
                          height="101"
                          viewBox="0 0 128 101"
                          width="128"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            clip-path="url(#clip0_3901_6947)"
                          >
                            <path
                              d="M110.044 91.1199L120 101V50C120 48.8954 119.105 48 118 48H70C68.8954 48 68 48.8954 68 50V88.5395C68 89.644 68.8954 90.5395 70 90.5395H108.635C109.163 90.5395 109.67 90.7481 110.044 91.1199Z"
                              fill="var(--center-channel-bg)"
                              opacity="0.4"
                            />
                            <path
                              d="M110.044 91.1199L120 101V50C120 48.8954 119.105 48 118 48H70C68.8954 48 68 48.8954 68 50V88.5395C68 89.644 68.8954 90.5395 70 90.5395H108.635C109.163 90.5395 109.67 90.7481 110.044 91.1199Z"
                              fill="var(--button-bg)"
                              fill-opacity="0.12"
                            />
                            <path
                              d="M5.5 18L5.5 33L94 33"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-opacity="0.32"
                            />
                            <path
                              d="M3.00001 94L13.5 83.5L13.5 44.5L34.5 44.5"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-opacity="0.32"
                            />
                            <path
                              d="M21.5 70.5L21.5 56.5L95.498 56.5"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-opacity="0.32"
                            />
                            <circle
                              cx="2.5"
                              cy="2.5"
                              fill="var(--center-channel-color)"
                              fill-opacity="0.48"
                              r="2.5"
                              transform="matrix(1 8.74228e-08 8.74228e-08 -1 3 18)"
                            />
                            <circle
                              cx="2.5"
                              cy="2.5"
                              fill="var(--center-channel-color)"
                              fill-opacity="0.48"
                              r="2.5"
                              transform="matrix(1 8.74228e-08 8.74228e-08 -1 19 74)"
                            />
                            <path
                              d="M47.605 78.5638L34 92V23C34 21.8954 34.8954 21 36 21H102C103.105 21 104 21.8954 104 23V75.9868C104 77.0914 103.105 77.9868 102 77.9868H49.0103C48.4842 77.9868 47.9793 78.1941 47.605 78.5638Z"
                              fill="var(--color-indigo-500)"
                            />
                            <path
                              d="M42.605 73.5638L29 87V18C29 16.8954 29.8954 16 31 16H97C98.1046 16 99 16.8954 99 18V70.9868C99 72.0914 98.1046 72.9868 97 72.9868H44.0103C43.4842 72.9868 42.9793 73.1941 42.605 73.5638Z"
                              fill="var(--center-channel-bg)"
                            />
                            <path
                              d="M31 16.5H97C97.8284 16.5 98.5 17.1716 98.5 18V70.9873C98.4998 71.8155 97.8283 72.4873 97 72.4873H44.0107C43.3532 72.4873 42.7218 72.746 42.2539 73.208L29.5 85.8027V18C29.5 17.1716 30.1716 16.5 31 16.5Z"
                              stroke="var(--center-channel-color)"
                              stroke-opacity="0.8"
                            />
                            <circle
                              cx="47"
                              cy="35"
                              fill="var(--center-channel-color)"
                              fill-opacity="0.32"
                              r="9"
                            />
                            <path
                              d="M62 31H78"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-opacity="0.48"
                            />
                            <path
                              d="M39 55H72"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-opacity="0.48"
                            />
                            <path
                              d="M39 62H61"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-opacity="0.48"
                            />
                            <path
                              d="M62 37H87"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-opacity="0.48"
                            />
                            <path
                              d="M39 49H56"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-opacity="0.48"
                            />
                            <path
                              d="M60 49H78"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-opacity="0.48"
                            />
                            <circle
                              cx="17.8576"
                              cy="17.8576"
                              fill="var(--center-channel-bg)"
                              r="17.3576"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              transform="matrix(-1 0 0 1 123.713 0)"
                            />
                            <path
                              d="M92.998 19C92.998 25.6274 98.3706 31 104.998 31"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-opacity="0.48"
                              stroke-width="1.42861"
                            />
                            <line
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              transform="matrix(0.707107 0.707107 0.707107 -0.707107 116.766 30.6265)"
                              x1="0.5"
                              x2="15.3865"
                              y1="-0.5"
                              y2="-0.5"
                            />
                            <path
                              d="M127 44.5V62H89.5"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M86 62H76"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                            />
                            <path
                              d="M73 62H67"
                              stroke="var(--center-channel-color)"
                              stroke-linecap="round"
                            />
                            <circle
                              cx="2.5"
                              cy="94.5"
                              fill="var(--center-channel-color)"
                              fill-opacity="0.48"
                              r="2.5"
                            />
                          </g>
                          <defs>
                            <clippath
                              id="clip0_3901_6947"
                            >
                              <rect
                                fill="var(--center-channel-bg)"
                                height="101"
                                width="128"
                              />
                            </clippath>
                          </defs>
                        </svg>
                      </span>
                    </div>
                    <div
                      class="_empty-state__titles_zgtu5_30"
                    >
                      <h2
                        class="_empty-state__title_zgtu5_30"
                      >
                        <span
                          class=""
                          data-testid="no-results-title"
                        >
                          No results for “test-channel”
                        </span>
                      </h2>
                      <p
                        class="_empty-state__description_zgtu5_46"
                      >
                        <span
                          class=""
                        >
                          Check the spelling or try another search.
                        </span>
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="simplebar-placeholder"
            style="width: 0px; height: 0px;"
          />
        </div>
        <div
          class="simplebar-track simplebar-horizontal"
          style="visibility: hidden;"
        >
          <div
            class="simplebar-scrollbar"
            style="width: 0px; display: none;"
          />
        </div>
        <div
          class="simplebar-track simplebar-vertical"
          style="visibility: hidden;"
        >
          <div
            class="simplebar-scrollbar"
            style="height: 0px; display: none;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with default props 1`] = `
<div>
  <div
    class="no-results__wrapper"
    data-testid="no-results-wrapper"
  >
    <div
      class="no-results__text-container"
    />
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with horizontal layout 1`] = `
<div>
  <div
    class="no-results__wrapper horizontal-layout"
    data-testid="no-results-wrapper"
  >
    <div
      class="no-results__variant-wrapper"
    >
      <div>
        Test
      </div>
    </div>
    <div
      class="no-results__text-container"
    >
      <h3
        class="no-results__title"
        data-testid="no-results-title"
      >
        Test
      </h3>
      <div
        class="no-results__subtitle"
      >
        Subtitle
      </div>
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant ChannelFiles 1`] = `
<div>
  <div
    class="no-results__wrapper no-results__wrapper--compass"
    data-testid="no-results-wrapper"
  >
    <div
      class="_scrollbar_f5sq5_2 _empty-state_zgtu5_2 no-results__empty-state"
      data-simplebar="init"
    >
      <div
        class="simplebar-wrapper"
      >
        <div
          class="simplebar-height-auto-observer-wrapper"
        >
          <div
            class="simplebar-height-auto-observer"
          />
        </div>
        <div
          class="simplebar-mask"
        >
          <div
            class="simplebar-offset"
            style="right: 0px; bottom: 0px;"
          >
            <div
              aria-label="scrollable content"
              class="simplebar-content-wrapper"
              role="region"
              style="height: auto; overflow-x: hidden; overflow-y: hidden;"
              tabindex="-1"
            >
              <div
                class="simplebar-content"
              >
                <div
                  class="_empty-state__container_zgtu5_14"
                >
                  <div
                    class="_empty-state__illustration_zgtu5_24"
                  >
                    <span
                      aria-hidden="true"
                      class="_illustration_xetnl_2"
                    >
                      <div>
                        Test
                      </div>
                    </span>
                  </div>
                  <div
                    class="_empty-state__titles_zgtu5_30"
                  >
                    <h2
                      class="_empty-state__title_zgtu5_30"
                    >
                      <span
                        class=""
                        data-testid="no-results-title"
                      >
                        No files yet
                      </span>
                    </h2>
                    <p
                      class="_empty-state__description_zgtu5_46"
                    >
                      <span
                        class=""
                      >
                        Files posted in this channel will show here.
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="simplebar-placeholder"
          style="width: 0px; height: 0px;"
        />
      </div>
      <div
        class="simplebar-track simplebar-horizontal"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="width: 0px; display: none;"
        />
      </div>
      <div
        class="simplebar-track simplebar-vertical"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="height: 0px; display: none;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant ChannelFilesFiltered 1`] = `
<div>
  <div
    class="no-results__wrapper no-results__wrapper--compass"
    data-testid="no-results-wrapper"
  >
    <div
      class="_scrollbar_f5sq5_2 _empty-state_zgtu5_2 no-results__empty-state"
      data-simplebar="init"
    >
      <div
        class="simplebar-wrapper"
      >
        <div
          class="simplebar-height-auto-observer-wrapper"
        >
          <div
            class="simplebar-height-auto-observer"
          />
        </div>
        <div
          class="simplebar-mask"
        >
          <div
            class="simplebar-offset"
            style="right: 0px; bottom: 0px;"
          >
            <div
              aria-label="scrollable content"
              class="simplebar-content-wrapper"
              role="region"
              style="height: auto; overflow-x: hidden; overflow-y: hidden;"
              tabindex="-1"
            >
              <div
                class="simplebar-content"
              >
                <div
                  class="_empty-state__container_zgtu5_14"
                >
                  <div
                    class="_empty-state__illustration_zgtu5_24"
                  >
                    <span
                      aria-hidden="true"
                      class="_illustration_xetnl_2"
                    >
                      <div>
                        Test
                      </div>
                    </span>
                  </div>
                  <div
                    class="_empty-state__titles_zgtu5_30"
                  >
                    <h2
                      class="_empty-state__title_zgtu5_30"
                    >
                      <span
                        class=""
                        data-testid="no-results-title"
                      >
                        No files found
                      </span>
                    </h2>
                    <p
                      class="_empty-state__description_zgtu5_46"
                    >
                      <span
                        class=""
                      >
                        This channel doesn't contains any file with the selected file format.
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="simplebar-placeholder"
          style="width: 0px; height: 0px;"
        />
      </div>
      <div
        class="simplebar-track simplebar-horizontal"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="width: 0px; display: none;"
        />
      </div>
      <div
        class="simplebar-track simplebar-vertical"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="height: 0px; display: none;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant ChannelSearch 1`] = `
<div>
  <div
    class="no-results__wrapper no-results__wrapper--compass"
    data-testid="no-results-wrapper"
  >
    <div
      class="_scrollbar_f5sq5_2 _empty-state_zgtu5_2 no-results__empty-state"
      data-simplebar="init"
    >
      <div
        class="simplebar-wrapper"
      >
        <div
          class="simplebar-height-auto-observer-wrapper"
        >
          <div
            class="simplebar-height-auto-observer"
          />
        </div>
        <div
          class="simplebar-mask"
        >
          <div
            class="simplebar-offset"
            style="right: 0px; bottom: 0px;"
          >
            <div
              aria-label="scrollable content"
              class="simplebar-content-wrapper"
              role="region"
              style="height: auto; overflow-x: hidden; overflow-y: hidden;"
              tabindex="-1"
            >
              <div
                class="simplebar-content"
              >
                <div
                  class="_empty-state__container_zgtu5_14"
                >
                  <div
                    class="_empty-state__illustration_zgtu5_24"
                  >
                    <span
                      aria-hidden="true"
                      class="_illustration_xetnl_2"
                    >
                      <div>
                        Test
                      </div>
                    </span>
                  </div>
                  <div
                    class="_empty-state__titles_zgtu5_30"
                  >
                    <h2
                      class="_empty-state__title_zgtu5_30"
                    >
                      <span
                        class=""
                        data-testid="no-results-title"
                      >
                        No results for “test-channel”
                      </span>
                    </h2>
                    <p
                      class="_empty-state__description_zgtu5_46"
                    >
                      <span
                        class=""
                      >
                        Check the spelling or try another search.
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="simplebar-placeholder"
          style="width: 0px; height: 0px;"
        />
      </div>
      <div
        class="simplebar-track simplebar-horizontal"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="width: 0px; display: none;"
        />
      </div>
      <div
        class="simplebar-track simplebar-vertical"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="height: 0px; display: none;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant FlaggedPosts 1`] = `
<div>
  <div
    class="no-results__wrapper no-results__wrapper--compass"
    data-testid="no-results-wrapper"
  >
    <div
      class="_scrollbar_f5sq5_2 _empty-state_zgtu5_2 no-results__empty-state"
      data-simplebar="init"
    >
      <div
        class="simplebar-wrapper"
      >
        <div
          class="simplebar-height-auto-observer-wrapper"
        >
          <div
            class="simplebar-height-auto-observer"
          />
        </div>
        <div
          class="simplebar-mask"
        >
          <div
            class="simplebar-offset"
            style="right: 0px; bottom: 0px;"
          >
            <div
              aria-label="scrollable content"
              class="simplebar-content-wrapper"
              role="region"
              style="height: auto; overflow-x: hidden; overflow-y: hidden;"
              tabindex="-1"
            >
              <div
                class="simplebar-content"
              >
                <div
                  class="_empty-state__container_zgtu5_14"
                >
                  <div
                    class="_empty-state__illustration_zgtu5_24"
                  >
                    <span
                      aria-hidden="true"
                      class="_illustration_xetnl_2"
                    >
                      <div>
                        Test
                      </div>
                    </span>
                  </div>
                  <div
                    class="_empty-state__titles_zgtu5_30"
                  >
                    <h2
                      class="_empty-state__title_zgtu5_30"
                    >
                      <span
                        class=""
                        data-testid="no-results-title"
                      >
                        No saved messages yet
                      </span>
                    </h2>
                    <p
                      class="_empty-state__description_zgtu5_46"
                    >
                      <span
                        class=""
                      >
                        To save something for later, open the context menu on a message and choose Save. Saved messages are only visible to you
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="simplebar-placeholder"
          style="width: 0px; height: 0px;"
        />
      </div>
      <div
        class="simplebar-track simplebar-horizontal"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="width: 0px; display: none;"
        />
      </div>
      <div
        class="simplebar-track simplebar-vertical"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="height: 0px; display: none;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant Mentions 1`] = `
<div>
  <div
    class="no-results__wrapper no-results__wrapper--compass"
    data-testid="no-results-wrapper"
  >
    <div
      class="_scrollbar_f5sq5_2 _empty-state_zgtu5_2 no-results__empty-state"
      data-simplebar="init"
    >
      <div
        class="simplebar-wrapper"
      >
        <div
          class="simplebar-height-auto-observer-wrapper"
        >
          <div
            class="simplebar-height-auto-observer"
          />
        </div>
        <div
          class="simplebar-mask"
        >
          <div
            class="simplebar-offset"
            style="right: 0px; bottom: 0px;"
          >
            <div
              aria-label="scrollable content"
              class="simplebar-content-wrapper"
              role="region"
              style="height: auto; overflow-x: hidden; overflow-y: hidden;"
              tabindex="-1"
            >
              <div
                class="simplebar-content"
              >
                <div
                  class="_empty-state__container_zgtu5_14"
                >
                  <div
                    class="_empty-state__illustration_zgtu5_24"
                  >
                    <span
                      aria-hidden="true"
                      class="_illustration_xetnl_2"
                    >
                      <div>
                        Test
                      </div>
                    </span>
                  </div>
                  <div
                    class="_empty-state__titles_zgtu5_30"
                  >
                    <h2
                      class="_empty-state__title_zgtu5_30"
                    >
                      <span
                        class=""
                        data-testid="no-results-title"
                      >
                        No mentions yet
                      </span>
                    </h2>
                    <p
                      class="_empty-state__description_zgtu5_46"
                    >
                      <span
                        class=""
                      >
                        Messages where someone mentions you or includes your trigger words are saved here.
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="simplebar-placeholder"
          style="width: 0px; height: 0px;"
        />
      </div>
      <div
        class="simplebar-track simplebar-horizontal"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="width: 0px; display: none;"
        />
      </div>
      <div
        class="simplebar-track simplebar-vertical"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="height: 0px; display: none;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/no_results_indicator should match snapshot with variant PinnedPosts 1`] = `
<div>
  <div
    class="no-results__wrapper no-results__wrapper--compass"
    data-testid="no-results-wrapper"
  >
    <div
      class="_scrollbar_f5sq5_2 _empty-state_zgtu5_2 no-results__empty-state"
      data-simplebar="init"
    >
      <div
        class="simplebar-wrapper"
      >
        <div
          class="simplebar-height-auto-observer-wrapper"
        >
          <div
            class="simplebar-height-auto-observer"
          />
        </div>
        <div
          class="simplebar-mask"
        >
          <div
            class="simplebar-offset"
            style="right: 0px; bottom: 0px;"
          >
            <div
              aria-label="scrollable content"
              class="simplebar-content-wrapper"
              role="region"
              style="height: auto; overflow-x: hidden; overflow-y: hidden;"
              tabindex="-1"
            >
              <div
                class="simplebar-content"
              >
                <div
                  class="_empty-state__container_zgtu5_14"
                >
                  <div
                    class="_empty-state__illustration_zgtu5_24"
                  >
                    <span
                      aria-hidden="true"
                      class="_illustration_xetnl_2"
                    >
                      <div>
                        Test
                      </div>
                    </span>
                  </div>
                  <div
                    class="_empty-state__titles_zgtu5_30"
                  >
                    <h2
                      class="_empty-state__title_zgtu5_30"
                    >
                      <span
                        class=""
                        data-testid="no-results-title"
                      >
                        No pinned messages yet
                      </span>
                    </h2>
                    <p
                      class="_empty-state__description_zgtu5_46"
                    >
                      <span
                        class=""
                      >
                        To pin important messages, open the context menu on a message and choose Pin to Channel. Pinned messages will be visible to everyone in this channel.
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="simplebar-placeholder"
          style="width: 0px; height: 0px;"
        />
      </div>
      <div
        class="simplebar-track simplebar-horizontal"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="width: 0px; display: none;"
        />
      </div>
      <div
        class="simplebar-track simplebar-vertical"
        style="visibility: hidden;"
      >
        <div
          class="simplebar-scrollbar"
          style="height: 0px; display: none;"
        />
      </div>
    </div>
  </div>
</div>
`;
